src/test/deca/etape_A/invalid/primary_expr.deca
// Description :
//   test de la règle du primary_expr 

// Résultats :
//   Erreur syntaxique 
// Ligne 9 : mismatched input 'readfloat' expecting ')'

{
readint(readfloat());
}